<resources>
    <string name="app_name">aplikasiObat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Welcome">Selamat</string>
    <string name="selamat_datang_di_nmedsr">Selamat Datang di \nMedsR</string>
    <string name="desc_welcome">Aplikasi ini akan secara otomatis mengingatkan Anda untuk meminum obat sesuai dengan resep dokter Anda.</string>
    <string name="masuk">Masuk</string>
    <string name="buat_akun">Buat Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tidak_ada_jadwal_minum_obat">Tidak Ada Jadwal Minum Obat</string>
    <string name="waktunya_bersantai">Waktunya Bersantai</string>
    <string name="tidak_ada_reminder_minum_obat_saat_ini_nikmati_harimu_dengan_tenang">Tidak ada reminder minum obat saat ini. Nikmati harimu dengan tenang!</string>
    <string name="jadwal_obat_hari_ini">Jadwal Obat Hari Ini</string>
    <string name="semua">Semua</string>
    <string name="belum_diminum">Belum Diminum</string>
    <string name="sudah_diminum">Sudah Diminum</string>
    <string name="apakah_anda_yakin_ingin_keluar_dari_akun_anda_klik_keluar_untuk_melanjutkan_atau_batal_untuk_tetap_masuk">Apakah Anda yakin ingin keluar dari akun Anda? Klik \'Keluar\' untuk melanjutkan atau \'Batal\' untuk tetap masuk.</string>
    <string name="konfirmasi_keluar">Konfirmasi Keluar</string>
    <string name="batal">Batal</string>
    <string name="keluar">Keluar</string>
    <string-array name="gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>